--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### C++ template
 # Prerequisites
 *.d
 
@@ -30,3 +31,19 @@
 *.exe
 *.out
 *.app
+
+### CMake
+cmake-build-*/
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+.idea/
