Added Sa structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Pea_project_2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Pea_project_2 src/main.cpp src/Graph/Graph.cpp src/Graph/Graph.hpp src/TabuSearch/TabuSearch.cpp src/TabuSearch/TabuSearch.hpp)
+add_executable(Pea_project_2 src/main.cpp src/Graph/Graph.cpp src/Graph/Graph.hpp src/TabuSearch/TabuSearch.cpp src/TabuSearch/TabuSearch.hpp src/SimulatedAnnealing/SimulatedAnnealing.cpp src/SimulatedAnnealing/SimulatedAnnealing.hpp)
 
 file(COPY sample_data/tsp17.txt sample_data/tsp4.txt
         sample_data/tsp6_1.txt sample_data/tsp6_2.txt sample_data/tsp10.txt sample_data/tsp12.txt
