--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(Pea_project_2 src/main.cpp src/Graph/Graph.cpp src/Graph/Graph.hp
 
 file(COPY sample_data/tsp17.txt sample_data/tsp4.txt
         sample_data/tsp6_1.txt sample_data/tsp6_2.txt sample_data/tsp10.txt sample_data/tsp12.txt
-        sample_data/tsp13.txt sample_data/tsp14.txt
+        sample_data/tsp13.txt sample_data/tsp14.txt sample_data/ftv55.txt sample_data/ftv170.txt
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
